--- a/MyVet.Common/MyVet.Common.csproj
+++ b/MyVet.Common/MyVet.Common.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
