Part 52 - Recover Password

--- a/MyVet.Web/appsettings.json
+++ b/MyVet.Web/appsettings.json
@@ -1,16 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MyVet;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Tokens": {
+        "Key": "asdfghjikbnvcgfLaIguanaFumaba9090Marimb___aCon!SaborAl#lanta&dsrtf090091yhgcvgfxdgc",
+        "Issuer": "localhost",
+        "Audience": "users"
+    },
+
+    "Mail": {
+        "From": "ivanxamarin@gmail.com",
+        "Smtp": "smtp.gmail.com",
+        "Port": 587,
+        "Password": "camucha0"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MyVet;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Tokens": {
-    "Key": "asdfghjikbnvcgfLaIguanaFumaba9090Marimb___aCon!SaborAl#lanta&dsrtf090091yhgcvgfxdgc",
-    "Issuer": "localhost",
-    "Audience": "users"
-  }
 }
